// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepNavigation should disable buttons if loading 1`] = `
<DocumentFragment>
  <div
    class="StepNavigation__StepNavigationWrapper-sc-1sww2ka-0 bdfMqA"
  >
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 fyuekd"
      data-testid="StepNavigation__back-button"
      disabled=""
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Back
      </div>
    </button>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 fyuekd"
      data-testid="StepNavigation__send-button"
      disabled=""
      type="submit"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="flex items-center"
        >
          <span
            class="flex items-center invisible space-x-2"
          >
            <div
              class="sc-bdnxRM AFVmm"
              height="16"
              width="16"
            >
              <svg>
                double-arrow-right.svg
              </svg>
            </div>
            <span>
              Send
            </span>
          </span>
          <div
            class="absolute top-0 left-0 flex items-center justify-center w-full h-full"
          >
            <div
              class="ButtonSpinner-sc-1jf6tdt-0 cQXTyY"
            />
          </div>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`StepNavigation should not render back button if on last step 1`] = `
<DocumentFragment>
  <div
    class="StepNavigation__StepNavigationWrapper-sc-1sww2ka-0 bdfMqA"
  >
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
      data-testid="StepNavigation__back-to-wallet-button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Back to Wallet
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`StepNavigation should not render back to wallet button if not on last step 1`] = `
<DocumentFragment>
  <div
    class="StepNavigation__StepNavigationWrapper-sc-1sww2ka-0 bdfMqA"
  >
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
      data-testid="StepNavigation__back-button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Back
      </div>
    </button>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 eJvReC"
      data-testid="StepNavigation__send-button"
      type="submit"
    >
      <div
        class="flex items-center space-x-2"
      >
        <span>
          Send
        </span>
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            double-arrow-right.svg
          </svg>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`StepNavigation should not render continue button if on last two steps 1`] = `
<DocumentFragment>
  <div
    class="StepNavigation__StepNavigationWrapper-sc-1sww2ka-0 bdfMqA"
  >
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
      data-testid="StepNavigation__back-button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Back
      </div>
    </button>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 eJvReC"
      data-testid="StepNavigation__send-button"
      type="submit"
    >
      <div
        class="flex items-center space-x-2"
      >
        <span>
          Send
        </span>
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            double-arrow-right.svg
          </svg>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`StepNavigation should not render continue button if on last two steps 2`] = `
<DocumentFragment>
  <div
    class="StepNavigation__StepNavigationWrapper-sc-1sww2ka-0 bdfMqA"
  >
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
      data-testid="StepNavigation__back-to-wallet-button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Back to Wallet
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`StepNavigation should render back button if not on last step 1`] = `
<DocumentFragment>
  <div
    class="StepNavigation__StepNavigationWrapper-sc-1sww2ka-0 bdfMqA"
  >
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
      data-testid="StepNavigation__back-button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Back
      </div>
    </button>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 eJvReC"
      data-testid="StepNavigation__send-button"
      type="submit"
    >
      <div
        class="flex items-center space-x-2"
      >
        <span>
          Send
        </span>
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            double-arrow-right.svg
          </svg>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`StepNavigation should render back to wallet button if on last step 1`] = `
<DocumentFragment>
  <div
    class="StepNavigation__StepNavigationWrapper-sc-1sww2ka-0 bdfMqA"
  >
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
      data-testid="StepNavigation__back-to-wallet-button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Back to Wallet
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`StepNavigation should render continue button if not on last two steps 1`] = `
<DocumentFragment>
  <div
    class="StepNavigation__StepNavigationWrapper-sc-1sww2ka-0 bdfMqA"
  >
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
      data-testid="StepNavigation__back-button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Back
      </div>
    </button>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 eJvReC"
      data-testid="StepNavigation__continue-button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Continue
      </div>
    </button>
  </div>
</DocumentFragment>
`;
